--- a/CookieOrderSystem/Templates/index.html
+++ b/CookieOrderSystem/Templates/index.html
@@ -37,7 +37,7 @@
 
     <!--drag box-->
     <div id="drop-box">
-        <p>將喜歡的餅乾拖曳進來或直接選擇數量</p>
+        <img src="/static/images/box2r.png" alt="Cute Drop Box" id="custom-drop-box">
     </div>
 
     <!--confirm order-->
